--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
             <!--formulaire de connexion-->
-            <section>
+            <section class="signin">
                 <form action="#">
                     <h1>Welcom back!</h1>
                     <p>Please enter your détails</p>
